[tool.poetry]
name = "pulselib"
version = "0.1.0"
description = "An intuitive and OOP API for interacting with the XYtech Mediapulse REST API."
authors = ["PixelOmen <PixelOmen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
rosettapath = {git = "https://github.com/PixelOmen/rosettapath.git", rev = "8f21bef"}
mediaprobe = {git = "https://github.com/PixelOmen/mediaprobe.git", rev = "737d957"}
tclib3 = {git = "https://github.com/PixelOmen/tclib3", rev = "20eedfe"}
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
